--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
   <div class="footer-container">
       <ul class="footer-links">
           <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="https://www.williamteach.pro" target="_blank" rel="noopener">Contact / Portfolio</a></li>
           <li><a href="/trajectories">Development Trajectories</a></li>
       </ul>
       
