--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,13 +21,13 @@
                 
                 <div class="vision-deck">
   <div class="vision-card">
-    A space to speak without coercion or shame—so our private truths can shape shared reality.
+    A space to speak without coercion, blame or shame - so our private truths can shape shared reality.
   </div>
   <div class="vision-card">
-    Each expression joins a larger voice—together forming a functional, collective consciousness.
+    Each cohort expression joins a larger voice—together forming a functional, reflective, collective consciousness.
   </div>
   <div class="vision-card">
-    Any group can become self-reflective to those with courage to both express and know the truth.
+    Any group can become cohort-conscious and self-reflective to those with courage to both express and know the truth.
   </div>
   <div class="vision-card">
     Shame is the leash. Fear is the cage. This can start breaking both if you’re ready.
